--- a/index.html
+++ b/index.html
@@ -32,10 +32,28 @@
 				<div class="name">王震 <span>&</span> 张宁毓</div>
 				<div class="arr"></div>
 			</div>
-			<div class="swiper-slide">Slide 2</div>
-			<div class="swiper-slide">Slide 3</div>
+			<div class="swiper-slide section2">
+				<ul class="text">
+					<li>08年的秋天</li>
+					<li>相遇在校园</li>
+					<li>玉兰馥郁，枫叶红艳</li>
+					<li>借你手机拨我号码</li>
+					<li>从此开始 再也未曾走散</li>
+					<li>明光桥北，蓟门桥南</li>
+					<li>青春有相伴</li>
+				</ul>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section3">
+				<div class="text">近<span id="run">0</span>年的爱情长跑</div>
+				<div class="arr"></div>
+			</div>
 		</div>
 	</div>
 <script src="inviter.js"></script>
 </body>
 </html>
+
+
+
+
