--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide section1">
+				<div class="bg"></div>
 				<div class="filter"></div>
 				<div class="title"><h1>WEDDING</h1><span>INVITATION</span></div>
 				<div class="time">2016.3.20</div>
@@ -45,8 +46,82 @@
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section3">
-				<div class="text">近<span id="run">0</span>年的爱情长跑</div>
+				<div class="text">近 <span id="run">0</span> 年的爱情长跑</div>
 				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section4">
+				<div class="text"><span id="s31">8</span><span id="s32">1</span>个月 <span id="s33">2</span><span id="s34">4</span><span id="s35">7</span><span id="s36">7</span>天</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section5">
+				<div class="text">我们一起努力<br>一起成长</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section6">
+				<div class="text">一起玩乐<br>一起笑</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section7">
+				<div class="text">一起走过很多城<br>很多角落</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section8">
+				<div class="text">也一起做过很多事</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section9">
+				<div class="text">
+					<p>那天的东京</p>
+					<p>弥漫着甜蜜的味道</p>
+					<p>我拿出戒指</p>
+					<p>你回答愿意</p>
+				</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section10">
+				<div class="text">以山为盟<span>以海为誓</span></div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section11">
+				<div class="text">就此走向<br>人生中的下一步</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section12">
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section13">
+				<div class="title">DETAILS</div>
+				<div class="time info">婚礼时间<p>2016.3.20 (星期日)  上午10:30</p></div>
+				<div class="hotel info">婚礼地点<p>丰联国际会馆</p></div>
+				<div class="address info">详细地址<p>北京市朝阳门外大街18号丰联广场B座15层</p></div>
+				<div class="map">
+					<div class="location"></div>
+					<div class="shadow"></div>
+					<div class="tip"></div>
+				</div>
+				<div class="arr"></div>
+			</div>
+			<div class="swiper-slide section14">
+				<div class="title">YOUR WISH</div>
+				<div class="line line-name">
+					<label for="name">姓名</label>
+					<div class="input"><input type="text" id="name" name="name"></div>
+				</div>
+				<div class="line line-people">
+					<label for="people">出席</label>
+					<div class="input">
+						<div class="select-cnt" id="select">请选择出席人数</div>
+						<select name="people" id="people">
+							<option value="0">无法出席</option>
+							<option value="1">1人</option>
+							<option value="2">2人</option>
+						</select>
+					</div>
+				</div>
+				<div class="line line-wish">
+					<label for="wish">留言</label>
+					<div class="input"><textarea name="wish" id="wish" cols="30" rows="10" placeholder="请留下您的祝福哦~"></textarea></div>
+				</div>
 			</div>
 		</div>
 	</div>
