--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section5">
-				<div class="text">我们一起努力<br>一起成长</div>
+				<div class="text">我们 <span class="s51">一起努力</span><br><span class="s52">一起成长</span></div>
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section6">
-				<div class="text">一起玩乐<br>一起笑</div>
+				<div class="text"><span class="s61">一起玩乐</span><br><span class="s62">一起笑</span></div>
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section7">
-				<div class="text">一起走过很多城<br>很多角落</div>
+				<div class="text">一起走过<span class="s71">很多城</span><br><span class="s72">很多角落</span></div>
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section8">
-				<div class="text">也一起做过很多事</div>
+				<div class="text">也一起做过<span class="s81">很多事</span></div>
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section9">
@@ -79,11 +79,11 @@
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section10">
-				<div class="text">以山为盟<span>以海为誓</span></div>
+				<div class="text"><span class="s1">以山为盟</span><span class="s2">以海为誓</span></div>
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section11">
-				<div class="text">就此走向<br>人生中的下一步</div>
+				<div class="text">就此走向<br>人生中的新篇章</div>
 				<div class="arr"></div>
 			</div>
 			<div class="swiper-slide section12">
@@ -111,7 +111,7 @@
 					<label for="people">出席</label>
 					<div class="input">
 						<div class="select-cnt" id="select">请选择出席人数</div>
-						<select name="people" id="people">
+						<select name="people" id="people" onchange="choose(this)">
 							<option value="0">无法出席</option>
 							<option value="1">1人</option>
 							<option value="2">2人</option>
