--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
 				</div>
 				<div class="line line-wish">
 					<label for="wish">留言</label>
-					<div class="input"><textarea name="wish" id="wish" cols="30" rows="10" placeholder="请留下您的祝福哦~"></textarea></div>
+					<div class="input"><textarea name="wish" id="wish" placeholder="请留下您的祝福哦~"></textarea></div>
+					<div class="text_number">0/100</div>
+				</div>
+				<div class="info">
+					<span>设计：新娘-张宁毓</span><span>开发：新郎-王震</span>
+					<p>由于新娘同学平时是UI设计师一枚，恰好新郎同学又是一名前端“攻城狮”，在这样的搭配下，请柬怎能不亲自设计亲自实现呐~这是我们的满满诚意，与爆棚的参与感，谢谢大家观赏~</p>
 				</div>
 			</div>
 		</div>
