--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta content="email=no" name="format-detection"/>
 <meta name="msapplication-tap-highlight" content="no">
 
-<title>婚礼请柬</title>
+<title>我们结婚啦~！</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 
@@ -23,6 +23,7 @@
 <script src="swiper-3.3.0.jquery.min.js"></script>
 </head>
 <body>
+	<img src="http://nyphile.github.io/images/share.png" alt="" class="">
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide section1">
