--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="swiper-3.3.0.jquery.min.js"></script>
 </head>
 <body>
-	<img src="http://nyphile.github.io/images/share.png" alt="" class="">
+	<img src="http://nyphile.github.io/images/bg1.png" alt="" class="">
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide section1">
