--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="swiper-3.3.0.jquery.min.js"></script>
 </head>
 <body>
-	<img src="http://nyphile.github.io/images/share.jpg" alt="" class="hidden">
+	<img src="http://nyphile.github.io/images/share.jpg" style="position: absolute;top: -900px;">
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide section1">
