--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta content="email=no" name="format-detection"/>
 <meta name="msapplication-tap-highlight" content="no">
 
-<title>我们结婚啦~！</title>
+<title>我们结婚啦</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 
