--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			</div>
 			<div class="swiper-slide section14">
 				<form id="form_5379" name="form_5379" class="common_form" action="http://active.163.com/service/form/v1/5379/submit?_charset=UTF-8" method="POST" target="frames">
-					<input name="_success" type="hidden" value="http://dev.f2e.163.com/NyPhile.github.io/inviter.shtml"/><input name="_fail" type="hidden" value="2"/><input id="ua" class="common_form_text form_5379_ua" name="ua" type="hidden" value="">
+					<input name="_success" type="hidden" value="http://nyphile.github.io/inviter.shtml"/><input name="_fail" type="hidden" value="http://nyphile.github.io/inviter.shtmll"/><input id="ua" class="common_form_text form_5379_ua" name="ua" type="hidden" value="">
 					<div class="title">YOUR WISH</div>
 					<div class="line line-name">
 						<label for="name">姓名</label>
