--- a/index.html
+++ b/index.html
@@ -110,9 +110,18 @@
 	</div>
 	<iframe src="" frameborder="0" id="frames" name="frames" style="display:none;"></iframe>
 <script src="inviter.js"></script>
+<script>
+	var music = document.createElement('div');
+	music.innerHTML = '<audio src="http://nyphile.github.io/images/music.mp3" autoplay="autoplay" loop="loop"></audio>';
+	music.style.position = "absolute";
+	music.style.top = "-100px"
+	music.style.height = "1px"
+	music.style.width = "1px"
+	music.style.overflow = "hidden"
+	$('img').eq(0).after(music)
+</script>
 </body>
 </html>
-
 
 
 
