--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
 <script src="inviter.js"></script>
 <script>
 	var music = document.createElement('div');
-	music.innerHTML = '<audio src="http://nyphile.github.io/images/music.mp3" autoplay="autoplay" loop="loop"></audio>';
+	music.innerHTML = '<audio src="http://nyphile.github.io/images/music.aac" autoplay="autoplay" loop="loop"></audio>';
 	music.style.position = "absolute";
 	music.style.top = "-100px"
 	music.style.height = "1px"
 	music.style.width = "1px"
 	music.style.overflow = "hidden"
-	$('img').eq(0).after(music)
+	$('img').eq(0).after(music);
 </script>
 </body>
 </html>
